<package format="3">

  <name>axis_camera</name>
  <version>0.3.2</version>
  <description>
    Python ROS drivers for accessing an Axis camera's MJPG
    stream. Also provides control for PTZ cameras.
  </description>
  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <author>Ryan Gariepy</author>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/axis_camera</url>
  <url type="repository">https://github.com/ros-drivers/axis_camera</url>
  <url type="bugtracker">https://github.com/ros-drivers/axis_camera/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>dynamic_reconfigure</depend>

  <exec_depend>camera_info_manager_py</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
